# TeleProtocol

./: CMakeCache.txt  CMakeLists.txt  IpcmdDesign.mdj  Makefile  README.md  cmake_install.cmake
IpCommandProtocol/: CMakeLists.txt
IpCommandProtocol/etc/test/: CMakeLists.txt  ServiceClient.c  ServiceServer.c
IpCommandProtocol/include/: Ipcom.h  IpcomConnection.h  IpcomEnums.h  IpcomMessage.h  IpcomOperationContext.h  IpcomProtocol.h  IpcomService.h  IpcomServiceWrapper.h  IpcomTransport.h  IpcomTypes.h  SocketUtils.h  ref_count.h
IpCommandProtocol/ipcomm/: CMakeLists.txt  IpcomConnection.c  IpcomEnums.c  IpcomMessage.c  IpcomOperationContext.c  IpcomProtocol.c  IpcomService.c  IpcomTransport.c  IpcomTransportUDPv4.c  SocketUtils.c
doc/: IpcmdDesign.mdj  README
geelyconfig/config/: Telematics_16000hz.tsf  Telematics_8000hz.tsf
gst-lgecnr/: CMakeLists.txt
gst-lgecnr/geelyconfig/config/: Bluetooth_16000hz.tsf  Bluetooth_8000hz.tsf  CarPlay_16000hz.tsf  CarPlay_24000hz.tsf  CarPlay_8000hz.tsf  Siri_24000hz.tsf  SpeechRecog_16000hz.tsf  Telematics_8000hz.tsf
gst-lgecnr/src/: commontypes.h  gstlgecnr.cpp  gstlgecnr.h  gstlgecnrprobe.c  gstlgecnrprobe.h
include/: IpcmdAgent.h  IpcmdBus.h  IpcmdChannel.h  IpcmdClient.h  IpcmdClientImpl.h  IpcmdConfig.h  IpcmdCore.h  IpcmdDeclare.h  IpcmdHost.h  IpcmdMessage.h  IpcmdMessageHandler.h  IpcmdOpStateMachine.h  IpcmdOpStateMachineCommon.h  IpcmdOperation.h  IpcmdOperationContext.h  IpcmdServer.h  IpcmdServerImpl.h  IpcmdService.h  IpcmdTransport.h  IpcmdTransportTcpv4.h  IpcmdTransportUdpv4.h  IpcomConnection.h  IpcomConnectionManager.h  IpcomEnums.h  IpcomMessage.h  IpcomNetifcMonitor.h  IpcomOpStateMachine.h  IpcomOperationContext.h  IpcomProtocol.h  IpcomService.h  IpcomSimpleAgent.h  IpcomTransport.h  IpcomTransportUDPv4.h  IpcomTypes.h  NetifcMonitor.h  SocketUtils.h  dprint.h  ref_count.h  reference.h
include_internal/: dprint.h
res/: libipcmd.conf  libipcmd.pc  libipcmd.pc.in
src/: CMakeLists.txt  IpcmdAgent.c  IpcmdBus.c  IpcmdChannel.c  IpcmdClient.c  IpcmdConfig.c  IpcmdCore.c  IpcmdHost.c  IpcmdMessage.c  IpcmdOpStateMachine.c  IpcmdOpStateMachineCLNoti.c  IpcmdOpStateMachineCLNotreq.c  IpcmdOpStateMachineCLRequest.c  IpcmdOpStateMachineCLSetnor.c  IpcmdOpStateMachineCLSetreq.c  IpcmdOpStateMachineCommon.c  IpcmdOperation.c  IpcmdOperationContext.c  IpcmdServer.c  IpcmdService.c  IpcmdTransportTcpv4.c  IpcmdTransportUdpv4.c  IpcomConnection.c  IpcomEnums.c  IpcomMessage.c  IpcomNetifcMonitor.c  IpcomOpStateMachine.c  IpcomOperationContext.c  IpcomProtocol.c  IpcomService.c  IpcomServiceWrapper.c  IpcomSimpleAgent.c  IpcomTransport.c  IpcomTransportUDPv4.c  Makefile  NetifcMonitor.c  SocketUtils.c  cmake_install.cmake  gstlgecnr.cpp  gstlgecnr.h  (+4 more)
src/ipcomm/: CMakeLists.txt  IpcomConnection.c  IpcomMessage.c  IpcomProtocol.c  IpcomProtocol.c~  IpcomTransportUDPv4.c
src/manager/: network_link_monitor.cpp  network_link_monitor.h  xcall_error.h  xcall_export.h  xcall_manager.cpp  xcall_manager.h
src/pipeline/: abstract_pipeline.h  unittest_mic_pipeline.cpp  unittest_mic_pipeline.h  unittest_rtpVoice_pipeline.cpp  unittest_rtpVoice_pipeline.h  unittest_spk_pipeline.cpp  unittest_spk_pipeline.h  voicecall_pipeline.cpp  voicecall_pipeline.h
src/player/: abstract_player.h  unittest_mic_player.cpp  unittest_mic_player.h  unittest_rtpVoice_player.cpp  unittest_rtpVoice_player.h  unittest_spk_player.cpp  unittest_spk_player.h  voicecall_player.cpp  voicecall_player.h
src/service/: xcall_debug.h  xcall_service_client.cpp  xcall_service_server.cpp
src/tem2/: CMakeLists.txt  IpcomServiceClientTem2.c
test/: CMakeLists.txt  ClientAgent.c  ClientAgentTest.c  ClientTest.c  ClientTestNoti.c  CoreTest  CoreTest.c  Makefile  ServerAgent.c  ServerAgentTest.c  ServerAgentTest2.c  ServerAgentTestBroadcastNoti.c  ServerTest.c  ServerTestNoti.c  ServiceClient.c  ServiceServer.c  cmake_install.cmake
tools/wireshark_packet_dissector/: README  ipcmd_dissector.lua  ipcomm_dissector.lua
tools/wireshark_packet_dissector/ipcmd/: CMakeLists.txt  Makefile.am  Makefile.common  Makefile.in  README  ipcmd.asn  ipcmd.cnf  moduleinfo.h  moduleinfo.nmake  packet-ipcmd-template.c  packet-ipcmd-template.h  packet-ipcmd.c  packet-ipcmd.h
utils/logger/: dprint.h
xcalltestapp/src/: main.cpp  xcallcommonutils.h  xcalltest.cpp  xcalltest.h
